// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic 1`] = `
Object {
  "en": Object {
    "App": Object {
      "title": "Application",
    },
    "components": Object {
      "Modal": Object {
        "cancel": "Cancel",
        "ok": "OK",
      },
      "nest": Object {
        "RankingTable": Object {
          "headers": Object {
            "name": "Name",
            "rank": "Rank",
            "score": "Score",
          },
        },
      },
    },
  },
  "ja": Object {
    "App": Object {
      "title": "アプリケーション",
    },
    "components": Object {
      "Modal": Object {
        "cancel": "キャンセル",
        "ok": "OK",
      },
    },
    "pages": Object {
      "Login": Object {
        "button": "ログイン",
        "confirm": "パスワードの確認入力",
        "id": "ユーザーID",
        "passowrd": "パスワード",
      },
    },
  },
}
`;

exports[`json5 1`] = `
Object {
  "en": Object {
    "components": Object {
      "Modal": Object {
        "cancel": "Cancel",
        "ok": "OK",
      },
    },
  },
  "ja": Object {
    "components": Object {
      "Modal": Object {
        "cancel": "キャンセル",
        "ok": "OK",
      },
    },
  },
}
`;

exports[`yaml 1`] = `
Object {
  "en": Object {
    "components": Object {
      "Modal": Object {
        "cancel": "Cancel",
        "ok": "OK",
      },
    },
  },
  "ja": Object {
    "components": Object {
      "Modal": Object {
        "cancel": "キャンセル",
        "ok": "OK",
      },
    },
  },
}
`;
